# docs/swagger.json
@@ -9,6 +9,75 @@
     "host": "104.248.247.198:3000",
     "basePath": "/",
     "paths": {
+        "/api/file/upload": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "upload image",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Upload image"
+                ],
+                "summary": "Upload image",
+                "operationId": "file-upload-image",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "productId",
+                        "name": "productId",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "file",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.UploadedImageURL"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/products/": {
             "get": {
                 "description": "get products list",
@@ -494,9 +563,6 @@
                 "description": {
                     "type": "string"
                 },
-                "image": {
-                    "type": "string"
-                },
                 "price": {
                     "type": "integer"
                 },
@@ -576,9 +642,6 @@
                     "type": "string"
                 },
                 "description": {
-                    "type": "string"
-                },
-                "image": {
                     "type": "string"
                 },
                 "price": {
@@ -687,6 +750,14 @@
                 "surname": {
                     "type": "string",
                     "minLength": 1
+                }
+            }
+        },
+        "handler.UploadedImageURL": {
+            "type": "object",
+            "properties": {
+                "image_url": {
+                    "type": "string"
                 }
             }
         },
