# internal/handler/handler.go
@@ -23,15 +23,21 @@ type Products interface {
 	Delete(itemId string) error
 }
 
+type Files interface {
+	Upload(file domain.File) (string, error)
+}
+
 type Handler struct {
 	userService     User
 	productsService Products
+	fileService     Files
 }
 
 func NewHandler(services *service.Service) *Handler {
 	return &Handler{
 		userService:     services.User,
 		productsService: services.ProductsList,
+		fileService:     services.Files,
 	}
 }
 
@@ -62,6 +68,11 @@ func (h *Handler) InitRouter() *gin.Engine {
 			products.GET("/:id", h.getProductById)
 			products.PUT("/:id", h.userIdentify, h.userIsAdmin, h.updateProduct)
 			products.DELETE("/:id", h.userIdentify, h.userIsAdmin, h.deleteProduct)
+		}
+
+		files := api.Group("/file")
+		{
+			files.POST("/upload", h.userIdentify, h.userIsAdmin, h.uploadImage)
 		}
 	}
 
